2002-10-30  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&parse_args, $help): Support --no-cache.
	* doc/autoconf.texi (autom4te Invocation): Adjust.
	Suggested by Tim van Holder.

2002-10-29  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Particular Functions): AC_FUNC_MALLOC and
	AC_FUNC_REALLOC check for compatibility with glibc, not POSIX.
	Problem reported by Bruno Haible.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Header Templates): Put also in words what the
	pictures says to assist free style readers.
	(Customizing autom4te): s/--cache=/--cache /.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (_AC_FUNC_VFORK): Include stdlib.h and
	sys/wait.h.
	sparc_address_test returns void.
	Use it with an argument, as prototyped.
	From Bruno Haible.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Subdirectories): Cygnus dirs have
	configure.in, not configure.ac.
	Reported by Bruno Haible.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* tests/torture.at (Deep Package): New test.
	(Configuring subdirectories): Don't use a testSubDir as Autotest
	now does it itself.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* bin/autoreconf.in (&parse_args, $help): Support --warnings.
	* doc/autoconf.texi (Invoking autom4te): Rename as...
	(autom4te Invocation): this, for consistency with the other nodes.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* lib/autom4te.in (Autoconf): s/automate/autom4te/.
	Reported by Ralf Corsepius.

2002-10-29  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sh.m4 (_AS_QUOTE): The warning about quoted
	characters is a back as an `obsolete' warning now.
	Reported by Ralf Corsepius.

2002-10-28  Akim Demaille  <akim@epita.fr>

	* configure.ac: Bumpto 2.54c.

2002-10-28  Akim Demaille  <akim@epita.fr>

	Version 2.54b.

	* tests/foreign.at (Libtool): Adjust to broken libtoolize.

2002-10-28  Akim Demaille  <akim@epita.fr>
