@@ -1,3 +1,13 @@
+2002-10-31  Akim Demaille  <akim@epita.fr>
+
+	* lib/autoconf/general.m4 (_AC_MSG_LOG_CONFTEST): New.
+	(_AC_PREPROC_IFELSE, _AC_COMPILE_IFELSE, _AC_LINK_IFELSE)
+	(_AC_RUN_IFELSE): Use it.
+	* lib/autoconf/lang.m4 (_AC_COMPILER_OBJEXT):
+	(_AC_COMPILER_EXEEXT_DEFAULT): Likewise.
+	* lib/autoconf/c.m4 (AC_LANG_SOURCE): Don't include confdefs.h,
+	inline it.
+
 2002-10-30  Akim Demaille  <akim@epita.fr>
 
 	* bin/autom4te.in (&parse_args, $help): Support --no-cache.
